[project]
name = "pilgram"
version = "1.2.1"
description = "library for instagram filters"
authors = [{name = "Akiomi Kamakura", email = "akiomik@gmail.com"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2,<10.0",
    "pytest-cov>=4,<8",
    "Pillow>=10.3.0,<13.0",
    "pytest-benchmark>=4.0.0",
    "pytest-mock>=3.10.0",
    "ruff>=0.8.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["pilgram.tests.*", "pilgram.*.tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

# 外部ライブラリの型情報
[[tool.mypy.overrides]]
module = ["PIL.*", "numpy.*"]
ignore_missing_imports = true
