[project]
name = "pilgram"
dynamic = ["version"]
description = "library for instagram filters"
authors = [{name = "Akiomi Kamakura", email = "akiomik@gmail.com"}]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "pillow",
    "instagram",
    "instagram-filters",
    "css-filters",
    "image-blending",
    "blend-modes",
    "image-processing",
    "data-augmentation",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.21.0",  # Minimum version that supports Python 3.10
    "Pillow>=10.3.0", # Minimum version that support ImageMath.lambda_eval
]

[project.urls]
Homepage = "https://github.com/akiomik/pilgram"
Repository = "https://github.com/akiomik/pilgram"
Issues = "https://github.com/akiomik/pilgram/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-mock>=3.10.0",
    "ruff>=0.8.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "/pilgram",
  "/README.md",
  "/LICENSE",
  "/CITATION.cff",
  "/screenshots",
]

[tool.hatch.version]
path = "pilgram/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["pilgram"]
exclude = ["pilgram/tests", "pilgram/*/tests"]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

# External libraries
[[tool.mypy.overrides]]
module = ["PIL.*", "numpy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-v --cov=pilgram --benchmark-skip"

[tool.coverage.run]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
