[metadata]
name = pilgram
version = attr: pilgram._version.__version__
author = Akiomi Kamakura
author-email = akiomik@gmail.com
description = library for instagram filters
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
  pillow
  instagram
  instagram-filters
  css-filters
  image-processing
  data-augmentation
url = https://github.com/akiomik/pilgram
license = Apache License 2.0
license_file = LICENSE
platform = any
classifiers =
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 2
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.4
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Multimedia :: Graphics
  Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
packages = find:
setup_requires =
  setuptools >= 38.3.0
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*

[options.packages.find]
exclude =
    *.tests

[options.data_files]
'' = screenshot.png

[tool:pytest]
addopts = -v --cov=pilgram --benchmark-skip

[coverage:run]
omit =
  */tests/*

[coverage:report]
show_missing = true

[flake8]
doctests = true

[tox:tox]
envlist = py27, py37

[testenv]
whitelist_externals =
  pipenv
  pytest
deps =
  pillow
  numpy
commands =
  pipenv install -d --skip-lock
  pytest
setenv =
  PYTHONPATH = {toxinidir}
  PIPENV_VERBOSITY = -1
