[metadata]
name = pilgram
version = attr: pilgram._version.__version__
author = Akiomi Kamakura
author-email = akiomik@gmail.com
description = library for instagram filters
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
  pillow
  instagram
  instagram-filters
  css-filters
  image-blending
  blend-modes
  image-processing
  data-augmentation
url = https://github.com/akiomik/pilgram
license = Apache License 2.0
license_file = LICENSE
platform = any
classifiers =
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  Topic :: Multimedia :: Graphics
  Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
packages = find:
setup_requires =
  setuptools >= 38.3.0
python_requires = >=3.10

[options.packages.find]
exclude =
    *.tests

[options.data_files]
screenshots =
  screenshots/screenshot.png
  screenshots/filter-performance-comparison.png

[tool:pytest]
addopts = -v --cov=pilgram --benchmark-skip

[coverage:run]
omit =
  */tests/*

[coverage:report]
show_missing = true

[flake8]
doctests = true
max-line-length = 88
extend-ignore = E203
